parse2.y

%{
#include <stdio.h>
#include <string.h>
void yyerror(char *s);
extern int yylex();
void nuevaTemp(char *dire);
void nuevaEtiqueta(char *dire);
int temp, temp2; //Contador temporal de temporales
char temp_E[32];
char tipos[32];
%}

%union{
  char dir[64];
}

%token PYC
%token INICIO
%token FIN
%token ESTRUCTURA
%token DEF
%token SIN
%token SI
%token ENTONCES
%token MIENTRAS
%token HACER
%token SEGUN
%token ESCRIBIR
%token DEVOLVER
%token LEER
%token TERMINAR
%token CASO
%token PRED
%token DOSP
%token FALSO
%token VERDADERO
%token PUNCOM

%token<dir> TIPO
%token<dir> ID
%token<dir> CARACTER
%token<dir> CADENA
%token<dir> NUM

%token COMA
%right ASIG
%left O
%left Y
%left<dir> OPERADOR_RELACIONAL
%left<dir> SUM_RES
%left<dir> MUL_DIV_MOD
%right NO
%nonassoc PUNTO
%nonassoc CORDER
%nonassoc CORIZQ
%nonassoc LPAR RPAR
%nonassoc SIT
%nonassoc SINO
%type<dir> programa declaraciones tipo_registro tipo base tipo_arreglo lista_var arreglo funciones argumentos lista_arg arg tipo_arg param_arr sentencias sentencia casos predeterminado e_bool relacional expresion variable dato_est_sim parametros lista_param variable_comp A/*No terminales*/
%start programa         /*Inicio*/

%%

programa : declaraciones funciones { printf("Aceptado\n"); };

declaraciones : tipo {strcpy(tipos,$1);} lista_var PYC declaraciones {}
| tipo_registro lista_var PYC declaraciones {}
| {};

tipo_registro : ESTRUCTURA INICIO {printf("Inicio estructura\n");} declaraciones FIN {strcpy(tipos,"Estructura"); printf("Final estructura\n");};

tipo : base tipo_arreglo {strcat($1,$2); strcpy($$,$1);};

base : TIPO {strcpy($$,$1);};

tipo_arreglo : CORIZQ NUM CORDER tipo_arreglo {strcpy($$,"["); strcat($$,$2); strcat($$,"]"); strcat($$,$4);}
| {};

lista_var : ID A {printf("%s %s\n", tipos, $1);};

A : COMA ID A {printf("%s %s\n", tipos, $2);}
|  {};

funciones : DEF tipo ID LPAR argumentos RPAR {printf("%s %s()\narg: %s\n",$2,$3,$5);} INICIO {printf("Inicio de funcion (%s)\n", $3);} declaraciones sentencias FIN {printf("Final de funcion (%s)\n", $3);} funciones {}
| {};

argumentos : lista_arg {strcpy($$,$1);}
| SIN {strcpy($$,"Sin");};

lista_arg : lista_arg COMA arg {strcpy($$,$1); strcat($$,", "); strcat($$,$3);}
| arg {strcpy($$,$1);};

arg : tipo_arg ID {strcpy($$,$1); strcat($$," "); strcat($$,$2);};

tipo_arg : base param_arr {strcpy($$,$1); strcat($$,$2);};

param_arr : CORIZQ CORDER param_arr {strcpy($$,"[]"); strcat($$,$3);}
| {};

sentencias : sentencias sentencia {}
| {};

sentencia : SI e_bool ENTONCES sentencia FIN {}
| SI e_bool ENTONCES sentencia SINO sentencia FIN {}
| MIENTRAS e_bool HACER sentencia FIN {}
| HACER sentencia MIENTRAS e_bool PYC {}
| SEGUN LPAR variable RPAR HACER casos predeterminado FIN {}
| variable ASIG expresion PYC {}
| ESCRIBIR expresion PYC {}
| LEER variable PYC {}
| DEVOLVER PYC {}
| DEVOLVER expresion PYC {}
| TERMINAR PYC {}
| INICIO sentencias FIN {};

casos : CASO NUM DOSP sentencia casos {}
| CASO NUM DOSP sentencia{};

predeterminado : PRED DOSP sentencia {}
| {};

e_bool : e_bool O e_bool {}
| e_bool Y e_bool {}
| NO e_bool {}
| relacional {}
| VERDADERO {}
| FALSO {}

relacional : relacional OPERADOR_RELACIONAL relacional {}
| expresion {} ;

expresion : expresion SUM_RES expresion {}
| expresion MUL_DIV_MOD expresion {}
| LPAR expresion RPAR {}
| variable {}
| NUM {}
| CADENA {}
| CARACTER {};

variable : ID variable_comp {};

variable_comp : dato_est_sim {}
| arreglo {}
| LPAR parametros RPAR {};

dato_est_sim : dato_est_sim PUNTO ID {}
| {};

arreglo : CORIZQ expresion CORDER {}
| arreglo CORIZQ expresion CORDER {};

parametros : lista_param {}
| {};

lista_param : lista_param COMA expresion {}
| expresion {};

%%
/*
--Nombre Funcion: yyerror()
--Descripcion: Funcion para mandar un mensaje de error sintactico
--Autor: El profesor
--Fecha de creacion: Desconocido
*/
void yyerror(char *s){
    printf("Error sintactico. %s\n",s);
}

/*
--Nombre Funcion: nuevaTemp
--Descripcion: Funcion para crear una nueva temporal
--Autor: El profesor
--Fecha de creacion: Desconocido
*/
void nuevaTemp(char *dire){
    char t[32];
    sprintf(t, "t%d", temp++);
    strcpy (dire,t);
}

/*
--Nombre Funcion: nuevaEtiqueta()
--Descripcion: Funacion para crear una nuava Etiqueta
--Autor: Héctor Montoya Pérez
--Fecha de creacion: 23 Mayo 2020
--Ultima modificacion: 24 Mayo 2020
*/
void nuevaEtiqueta(char *dire){
    char L[32];
    sprintf(L, "L%d", temp2++);
    strcpy (dire,L);
}
