y.output
   0  $accept : programa $end

   1  programa : declaraciones funciones

   2  declaraciones : tipo lista_var PYC declaraciones
   3                | tipo_registro lista_var PYC declaraciones
   4                |

   5  tipo_registro : ESTRUCTURA INICIO declaraciones FIN

   6  tipo : base tipo_arreglo

   7  base : TIPO

   8  tipo_arreglo : CORIZQ NUM CORDER tipo_arreglo
   9               |

  10  lista_var : ID A

  11  A : COMA ID A
  12    |

  13  funciones : DEF tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias FIN funciones
  14            |

  15  argumentos : lista_arg
  16             | SIN

  17  lista_arg : lista_arg COMA arg
  18            | arg

  19  arg : tipo_arg ID

  20  tipo_arg : base param_arr

  21  param_arr : CORIZQ CORDER param_arr
  22            |

  23  sentencias : sentencias sentencia
  24             |

  25  sentencia : SI e_bool ENTONCES sentencias FIN
  26            | SI e_bool ENTONCES sentencias SINO sentencias FIN
  27            | MIENTRAS e_bool HACER sentencias FIN
  28            | HACER sentencias MIENTRAS e_bool PYC
  29            | SEGUN LPAR variable RPAR HACER casos predeterminado FIN
  30            | variable ASIG expresion PYC
  31            | ESCRIBIR expresion PYC
  32            | LEER variable PYC
  33            | DEVOLVER PYC
  34            | DEVOLVER expresion PYC
  35            | TERMINAR PYC
  36            | INICIO sentencias FIN

  37  casos : CASO NUM DOSP sentencia casos
  38        | CASO NUM DOSP sentencia

  39  predeterminado : PRED DOSP sentencia
  40                 |

  41  e_bool : e_bool O e_bool
  42         | e_bool Y e_bool
  43         | NO e_bool
  44         | relacional
  45         | VERDADERO
  46         | FALSO

  47  relacional : relacional OPERADOR_RELACIONAL relacional
  48             | expresion

  49  expresion : expresion SUM_RES expresion
  50            | expresion MUL_DIV_MOD expresion
  51            | LPAR expresion RPAR
  52            | variable
  53            | NUM
  54            | CADENA
  55            | CARACTER

  56  variable : ID variable_comp

  57  variable_comp : dato_est_sim
  58                | arreglo
  59                | LPAR parametros RPAR

  60  dato_est_sim : dato_est_sim PUNTO ID
  61               |

  62  arreglo : CORIZQ expresion CORDER
  63          | CORIZQ expresion CORDER arreglo

  64  parametros : lista_param
  65             |

  66  lista_param : lista_param COMA expresion
  67              | expresion

state 0
	$accept : . programa $end  (0)
	declaraciones : .  (4)

	ESTRUCTURA  shift 1
	TIPO  shift 2
	$end  reduce 4
	DEF  reduce 4

	programa  goto 3
	declaraciones  goto 4
	tipo_registro  goto 5
	tipo  goto 6
	base  goto 7


state 1
	tipo_registro : ESTRUCTURA . INICIO declaraciones FIN  (5)

	INICIO  shift 8
	.  error


state 2
	base : TIPO .  (7)

	.  reduce 7


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : declaraciones . funciones  (1)
	funciones : .  (14)

	DEF  shift 9
	$end  reduce 14

	funciones  goto 10


state 5
	declaraciones : tipo_registro . lista_var PYC declaraciones  (3)

	ID  shift 11
	.  error

	lista_var  goto 12


state 6
	declaraciones : tipo . lista_var PYC declaraciones  (2)

	ID  shift 11
	.  error

	lista_var  goto 13


state 7
	tipo : base . tipo_arreglo  (6)
	tipo_arreglo : .  (9)

	CORIZQ  shift 14
	ID  reduce 9

	tipo_arreglo  goto 15


state 8
	tipo_registro : ESTRUCTURA INICIO . declaraciones FIN  (5)
	declaraciones : .  (4)

	ESTRUCTURA  shift 1
	TIPO  shift 2
	FIN  reduce 4

	declaraciones  goto 16
	tipo_registro  goto 5
	tipo  goto 6
	base  goto 7


state 9
	funciones : DEF . tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias FIN funciones  (13)

	TIPO  shift 2
	.  error

	tipo  goto 17
	base  goto 7


state 10
	programa : declaraciones funciones .  (1)

	.  reduce 1


state 11
	lista_var : ID . A  (10)
	A : .  (12)

	COMA  shift 18
	PYC  reduce 12

	A  goto 19


state 12
	declaraciones : tipo_registro lista_var . PYC declaraciones  (3)

	PYC  shift 20
	.  error


state 13
	declaraciones : tipo lista_var . PYC declaraciones  (2)

	PYC  shift 21
	.  error


state 14
	tipo_arreglo : CORIZQ . NUM CORDER tipo_arreglo  (8)

	NUM  shift 22
	.  error


state 15
	tipo : base tipo_arreglo .  (6)

	.  reduce 6


state 16
	tipo_registro : ESTRUCTURA INICIO declaraciones . FIN  (5)

	FIN  shift 23
	.  error


state 17
	funciones : DEF tipo . ID LPAR argumentos RPAR INICIO declaraciones sentencias FIN funciones  (13)

	ID  shift 24
	.  error


state 18
	A : COMA . ID A  (11)

	ID  shift 25
	.  error


state 19
	lista_var : ID A .  (10)

	.  reduce 10


state 20
	declaraciones : tipo_registro lista_var PYC . declaraciones  (3)
	declaraciones : .  (4)

	ESTRUCTURA  shift 1
	TIPO  shift 2
	$end  reduce 4
	INICIO  reduce 4
	FIN  reduce 4
	DEF  reduce 4
	SI  reduce 4
	MIENTRAS  reduce 4
	HACER  reduce 4
	SEGUN  reduce 4
	ESCRIBIR  reduce 4
	DEVOLVER  reduce 4
	LEER  reduce 4
	TERMINAR  reduce 4
	ID  reduce 4

	declaraciones  goto 26
	tipo_registro  goto 5
	tipo  goto 6
	base  goto 7


state 21
	declaraciones : tipo lista_var PYC . declaraciones  (2)
	declaraciones : .  (4)

	ESTRUCTURA  shift 1
	TIPO  shift 2
	$end  reduce 4
	INICIO  reduce 4
	FIN  reduce 4
	DEF  reduce 4
	SI  reduce 4
	MIENTRAS  reduce 4
	HACER  reduce 4
	SEGUN  reduce 4
	ESCRIBIR  reduce 4
	DEVOLVER  reduce 4
	LEER  reduce 4
	TERMINAR  reduce 4
	ID  reduce 4

	declaraciones  goto 27
	tipo_registro  goto 5
	tipo  goto 6
	base  goto 7


state 22
	tipo_arreglo : CORIZQ NUM . CORDER tipo_arreglo  (8)

	CORDER  shift 28
	.  error


state 23
	tipo_registro : ESTRUCTURA INICIO declaraciones FIN .  (5)

	.  reduce 5


state 24
	funciones : DEF tipo ID . LPAR argumentos RPAR INICIO declaraciones sentencias FIN funciones  (13)

	LPAR  shift 29
	.  error


state 25
	A : COMA ID . A  (11)
	A : .  (12)

	COMA  shift 18
	PYC  reduce 12

	A  goto 30


state 26
	declaraciones : tipo_registro lista_var PYC declaraciones .  (3)

	.  reduce 3


state 27
	declaraciones : tipo lista_var PYC declaraciones .  (2)

	.  reduce 2


state 28
	tipo_arreglo : CORIZQ NUM CORDER . tipo_arreglo  (8)
	tipo_arreglo : .  (9)

	CORIZQ  shift 14
	ID  reduce 9

	tipo_arreglo  goto 31


state 29
	funciones : DEF tipo ID LPAR . argumentos RPAR INICIO declaraciones sentencias FIN funciones  (13)

	SIN  shift 32
	TIPO  shift 2
	.  error

	argumentos  goto 33
	lista_arg  goto 34
	arg  goto 35
	tipo_arg  goto 36
	base  goto 37


state 30
	A : COMA ID A .  (11)

	.  reduce 11


state 31
	tipo_arreglo : CORIZQ NUM CORDER tipo_arreglo .  (8)

	.  reduce 8


state 32
	argumentos : SIN .  (16)

	.  reduce 16


state 33
	funciones : DEF tipo ID LPAR argumentos . RPAR INICIO declaraciones sentencias FIN funciones  (13)

	RPAR  shift 38
	.  error


state 34
	argumentos : lista_arg .  (15)
	lista_arg : lista_arg . COMA arg  (17)

	COMA  shift 39
	RPAR  reduce 15


state 35
	lista_arg : arg .  (18)

	.  reduce 18


state 36
	arg : tipo_arg . ID  (19)

	ID  shift 40
	.  error


state 37
	tipo_arg : base . param_arr  (20)
	param_arr : .  (22)

	CORIZQ  shift 41
	ID  reduce 22

	param_arr  goto 42


state 38
	funciones : DEF tipo ID LPAR argumentos RPAR . INICIO declaraciones sentencias FIN funciones  (13)

	INICIO  shift 43
	.  error


state 39
	lista_arg : lista_arg COMA . arg  (17)

	TIPO  shift 2
	.  error

	arg  goto 44
	tipo_arg  goto 36
	base  goto 37


state 40
	arg : tipo_arg ID .  (19)

	.  reduce 19


state 41
	param_arr : CORIZQ . CORDER param_arr  (21)

	CORDER  shift 45
	.  error


state 42
	tipo_arg : base param_arr .  (20)

	.  reduce 20


state 43
	funciones : DEF tipo ID LPAR argumentos RPAR INICIO . declaraciones sentencias FIN funciones  (13)
	declaraciones : .  (4)

	ESTRUCTURA  shift 1
	TIPO  shift 2
	INICIO  reduce 4
	FIN  reduce 4
	SI  reduce 4
	MIENTRAS  reduce 4
	HACER  reduce 4
	SEGUN  reduce 4
	ESCRIBIR  reduce 4
	DEVOLVER  reduce 4
	LEER  reduce 4
	TERMINAR  reduce 4
	ID  reduce 4

	declaraciones  goto 46
	tipo_registro  goto 5
	tipo  goto 6
	base  goto 7


state 44
	lista_arg : lista_arg COMA arg .  (17)

	.  reduce 17


state 45
	param_arr : CORIZQ CORDER . param_arr  (21)
	param_arr : .  (22)

	CORIZQ  shift 41
	ID  reduce 22

	param_arr  goto 47


state 46
	funciones : DEF tipo ID LPAR argumentos RPAR INICIO declaraciones . sentencias FIN funciones  (13)
	sentencias : .  (24)

	.  reduce 24

	sentencias  goto 48


state 47
	param_arr : CORIZQ CORDER param_arr .  (21)

	.  reduce 21


state 48
	funciones : DEF tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias . FIN funciones  (13)
	sentencias : sentencias . sentencia  (23)

	INICIO  shift 49
	FIN  shift 50
	SI  shift 51
	MIENTRAS  shift 52
	HACER  shift 53
	SEGUN  shift 54
	ESCRIBIR  shift 55
	DEVOLVER  shift 56
	LEER  shift 57
	TERMINAR  shift 58
	ID  shift 59
	.  error

	sentencia  goto 60
	variable  goto 61


state 49
	sentencia : INICIO . sentencias FIN  (36)
	sentencias : .  (24)

	.  reduce 24

	sentencias  goto 62


state 50
	funciones : DEF tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias FIN . funciones  (13)
	funciones : .  (14)

	DEF  shift 9
	$end  reduce 14

	funciones  goto 63


state 51
	sentencia : SI . e_bool ENTONCES sentencias FIN  (25)
	sentencia : SI . e_bool ENTONCES sentencias SINO sentencias FIN  (26)

	FALSO  shift 64
	VERDADERO  shift 65
	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	NO  shift 69
	LPAR  shift 70
	.  error

	e_bool  goto 71
	relacional  goto 72
	expresion  goto 73
	variable  goto 74


state 52
	sentencia : MIENTRAS . e_bool HACER sentencias FIN  (27)

	FALSO  shift 64
	VERDADERO  shift 65
	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	NO  shift 69
	LPAR  shift 70
	.  error

	e_bool  goto 75
	relacional  goto 72
	expresion  goto 73
	variable  goto 74


state 53
	sentencia : HACER . sentencias MIENTRAS e_bool PYC  (28)
	sentencias : .  (24)

	.  reduce 24

	sentencias  goto 76


state 54
	sentencia : SEGUN . LPAR variable RPAR HACER casos predeterminado FIN  (29)

	LPAR  shift 77
	.  error


state 55
	sentencia : ESCRIBIR . expresion PYC  (31)

	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	LPAR  shift 70
	.  error

	expresion  goto 78
	variable  goto 74


state 56
	sentencia : DEVOLVER . PYC  (33)
	sentencia : DEVOLVER . expresion PYC  (34)

	PYC  shift 79
	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	LPAR  shift 70
	.  error

	expresion  goto 80
	variable  goto 74


state 57
	sentencia : LEER . variable PYC  (32)

	ID  shift 59
	.  error

	variable  goto 81


state 58
	sentencia : TERMINAR . PYC  (35)

	PYC  shift 82
	.  error


state 59
	variable : ID . variable_comp  (56)
	dato_est_sim : .  (61)

	CORIZQ  shift 83
	LPAR  shift 84
	PYC  reduce 61
	ENTONCES  reduce 61
	HACER  reduce 61
	COMA  reduce 61
	ASIG  reduce 61
	O  reduce 61
	Y  reduce 61
	OPERADOR_RELACIONAL  reduce 61
	SUM_RES  reduce 61
	MUL_DIV_MOD  reduce 61
	PUNTO  reduce 61
	CORDER  reduce 61
	RPAR  reduce 61

	arreglo  goto 85
	dato_est_sim  goto 86
	variable_comp  goto 87


state 60
	sentencias : sentencias sentencia .  (23)

	.  reduce 23


state 61
	sentencia : variable . ASIG expresion PYC  (30)

	ASIG  shift 88
	.  error


state 62
	sentencias : sentencias . sentencia  (23)
	sentencia : INICIO sentencias . FIN  (36)

	INICIO  shift 49
	FIN  shift 89
	SI  shift 51
	MIENTRAS  shift 52
	HACER  shift 53
	SEGUN  shift 54
	ESCRIBIR  shift 55
	DEVOLVER  shift 56
	LEER  shift 57
	TERMINAR  shift 58
	ID  shift 59
	.  error

	sentencia  goto 60
	variable  goto 61


state 63
	funciones : DEF tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias FIN funciones .  (13)

	.  reduce 13


state 64
	e_bool : FALSO .  (46)

	.  reduce 46


state 65
	e_bool : VERDADERO .  (45)

	.  reduce 45


state 66
	expresion : CARACTER .  (55)

	.  reduce 55


state 67
	expresion : CADENA .  (54)

	.  reduce 54


state 68
	expresion : NUM .  (53)

	.  reduce 53


state 69
	e_bool : NO . e_bool  (43)

	FALSO  shift 64
	VERDADERO  shift 65
	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	NO  shift 69
	LPAR  shift 70
	.  error

	e_bool  goto 90
	relacional  goto 72
	expresion  goto 73
	variable  goto 74


state 70
	expresion : LPAR . expresion RPAR  (51)

	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	LPAR  shift 70
	.  error

	expresion  goto 91
	variable  goto 74


state 71
	sentencia : SI e_bool . ENTONCES sentencias FIN  (25)
	sentencia : SI e_bool . ENTONCES sentencias SINO sentencias FIN  (26)
	e_bool : e_bool . O e_bool  (41)
	e_bool : e_bool . Y e_bool  (42)

	ENTONCES  shift 92
	O  shift 93
	Y  shift 94
	.  error


state 72
	e_bool : relacional .  (44)
	relacional : relacional . OPERADOR_RELACIONAL relacional  (47)

	OPERADOR_RELACIONAL  shift 95
	PYC  reduce 44
	ENTONCES  reduce 44
	HACER  reduce 44
	O  reduce 44
	Y  reduce 44


state 73
	relacional : expresion .  (48)
	expresion : expresion . SUM_RES expresion  (49)
	expresion : expresion . MUL_DIV_MOD expresion  (50)

	SUM_RES  shift 96
	MUL_DIV_MOD  shift 97
	PYC  reduce 48
	ENTONCES  reduce 48
	HACER  reduce 48
	O  reduce 48
	Y  reduce 48
	OPERADOR_RELACIONAL  reduce 48


state 74
	expresion : variable .  (52)

	.  reduce 52


state 75
	sentencia : MIENTRAS e_bool . HACER sentencias FIN  (27)
	e_bool : e_bool . O e_bool  (41)
	e_bool : e_bool . Y e_bool  (42)

	HACER  shift 98
	O  shift 93
	Y  shift 94
	.  error


state 76
	sentencias : sentencias . sentencia  (23)
	sentencia : HACER sentencias . MIENTRAS e_bool PYC  (28)

	INICIO  shift 49
	SI  shift 51
	MIENTRAS  shift 99
	HACER  shift 53
	SEGUN  shift 54
	ESCRIBIR  shift 55
	DEVOLVER  shift 56
	LEER  shift 57
	TERMINAR  shift 58
	ID  shift 59
	.  error

	sentencia  goto 60
	variable  goto 61


state 77
	sentencia : SEGUN LPAR . variable RPAR HACER casos predeterminado FIN  (29)

	ID  shift 59
	.  error

	variable  goto 100


state 78
	sentencia : ESCRIBIR expresion . PYC  (31)
	expresion : expresion . SUM_RES expresion  (49)
	expresion : expresion . MUL_DIV_MOD expresion  (50)

	PYC  shift 101
	SUM_RES  shift 96
	MUL_DIV_MOD  shift 97
	.  error


state 79
	sentencia : DEVOLVER PYC .  (33)

	.  reduce 33


state 80
	sentencia : DEVOLVER expresion . PYC  (34)
	expresion : expresion . SUM_RES expresion  (49)
	expresion : expresion . MUL_DIV_MOD expresion  (50)

	PYC  shift 102
	SUM_RES  shift 96
	MUL_DIV_MOD  shift 97
	.  error


state 81
	sentencia : LEER variable . PYC  (32)

	PYC  shift 103
	.  error


state 82
	sentencia : TERMINAR PYC .  (35)

	.  reduce 35


state 83
	arreglo : CORIZQ . expresion CORDER  (62)
	arreglo : CORIZQ . expresion CORDER arreglo  (63)

	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	LPAR  shift 70
	.  error

	expresion  goto 104
	variable  goto 74


state 84
	variable_comp : LPAR . parametros RPAR  (59)
	parametros : .  (65)

	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	LPAR  shift 70
	RPAR  reduce 65

	expresion  goto 105
	variable  goto 74
	parametros  goto 106
	lista_param  goto 107


state 85
	variable_comp : arreglo .  (58)

	.  reduce 58


state 86
	variable_comp : dato_est_sim .  (57)
	dato_est_sim : dato_est_sim . PUNTO ID  (60)

	PUNTO  shift 108
	PYC  reduce 57
	ENTONCES  reduce 57
	HACER  reduce 57
	COMA  reduce 57
	ASIG  reduce 57
	O  reduce 57
	Y  reduce 57
	OPERADOR_RELACIONAL  reduce 57
	SUM_RES  reduce 57
	MUL_DIV_MOD  reduce 57
	CORDER  reduce 57
	RPAR  reduce 57


state 87
	variable : ID variable_comp .  (56)

	.  reduce 56


state 88
	sentencia : variable ASIG . expresion PYC  (30)

	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	LPAR  shift 70
	.  error

	expresion  goto 109
	variable  goto 74


state 89
	sentencia : INICIO sentencias FIN .  (36)

	.  reduce 36


state 90
	e_bool : e_bool . O e_bool  (41)
	e_bool : e_bool . Y e_bool  (42)
	e_bool : NO e_bool .  (43)

	.  reduce 43


state 91
	expresion : expresion . SUM_RES expresion  (49)
	expresion : expresion . MUL_DIV_MOD expresion  (50)
	expresion : LPAR expresion . RPAR  (51)

	SUM_RES  shift 96
	MUL_DIV_MOD  shift 97
	RPAR  shift 110
	.  error


state 92
	sentencia : SI e_bool ENTONCES . sentencias FIN  (25)
	sentencia : SI e_bool ENTONCES . sentencias SINO sentencias FIN  (26)
	sentencias : .  (24)

	.  reduce 24

	sentencias  goto 111


state 93
	e_bool : e_bool O . e_bool  (41)

	FALSO  shift 64
	VERDADERO  shift 65
	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	NO  shift 69
	LPAR  shift 70
	.  error

	e_bool  goto 112
	relacional  goto 72
	expresion  goto 73
	variable  goto 74


state 94
	e_bool : e_bool Y . e_bool  (42)

	FALSO  shift 64
	VERDADERO  shift 65
	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	NO  shift 69
	LPAR  shift 70
	.  error

	e_bool  goto 113
	relacional  goto 72
	expresion  goto 73
	variable  goto 74


state 95
	relacional : relacional OPERADOR_RELACIONAL . relacional  (47)

	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	LPAR  shift 70
	.  error

	relacional  goto 114
	expresion  goto 73
	variable  goto 74


state 96
	expresion : expresion SUM_RES . expresion  (49)

	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	LPAR  shift 70
	.  error

	expresion  goto 115
	variable  goto 74


state 97
	expresion : expresion MUL_DIV_MOD . expresion  (50)

	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	LPAR  shift 70
	.  error

	expresion  goto 116
	variable  goto 74


state 98
	sentencia : MIENTRAS e_bool HACER . sentencias FIN  (27)
	sentencias : .  (24)

	.  reduce 24

	sentencias  goto 117


state 99
	sentencia : MIENTRAS . e_bool HACER sentencias FIN  (27)
	sentencia : HACER sentencias MIENTRAS . e_bool PYC  (28)

	FALSO  shift 64
	VERDADERO  shift 65
	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	NO  shift 69
	LPAR  shift 70
	.  error

	e_bool  goto 118
	relacional  goto 72
	expresion  goto 73
	variable  goto 74


state 100
	sentencia : SEGUN LPAR variable . RPAR HACER casos predeterminado FIN  (29)

	RPAR  shift 119
	.  error


state 101
	sentencia : ESCRIBIR expresion PYC .  (31)

	.  reduce 31


state 102
	sentencia : DEVOLVER expresion PYC .  (34)

	.  reduce 34


state 103
	sentencia : LEER variable PYC .  (32)

	.  reduce 32


state 104
	expresion : expresion . SUM_RES expresion  (49)
	expresion : expresion . MUL_DIV_MOD expresion  (50)
	arreglo : CORIZQ expresion . CORDER  (62)
	arreglo : CORIZQ expresion . CORDER arreglo  (63)

	SUM_RES  shift 96
	MUL_DIV_MOD  shift 97
	CORDER  shift 120
	.  error


state 105
	expresion : expresion . SUM_RES expresion  (49)
	expresion : expresion . MUL_DIV_MOD expresion  (50)
	lista_param : expresion .  (67)

	SUM_RES  shift 96
	MUL_DIV_MOD  shift 97
	COMA  reduce 67
	RPAR  reduce 67


state 106
	variable_comp : LPAR parametros . RPAR  (59)

	RPAR  shift 121
	.  error


state 107
	parametros : lista_param .  (64)
	lista_param : lista_param . COMA expresion  (66)

	COMA  shift 122
	RPAR  reduce 64


state 108
	dato_est_sim : dato_est_sim PUNTO . ID  (60)

	ID  shift 123
	.  error


state 109
	sentencia : variable ASIG expresion . PYC  (30)
	expresion : expresion . SUM_RES expresion  (49)
	expresion : expresion . MUL_DIV_MOD expresion  (50)

	PYC  shift 124
	SUM_RES  shift 96
	MUL_DIV_MOD  shift 97
	.  error


state 110
	expresion : LPAR expresion RPAR .  (51)

	.  reduce 51


state 111
	sentencias : sentencias . sentencia  (23)
	sentencia : SI e_bool ENTONCES sentencias . FIN  (25)
	sentencia : SI e_bool ENTONCES sentencias . SINO sentencias FIN  (26)

	INICIO  shift 49
	FIN  shift 125
	SI  shift 51
	MIENTRAS  shift 52
	HACER  shift 53
	SEGUN  shift 54
	ESCRIBIR  shift 55
	DEVOLVER  shift 56
	LEER  shift 57
	TERMINAR  shift 58
	ID  shift 59
	SINO  shift 126
	.  error

	sentencia  goto 60
	variable  goto 61


state 112
	e_bool : e_bool . O e_bool  (41)
	e_bool : e_bool O e_bool .  (41)
	e_bool : e_bool . Y e_bool  (42)

	Y  shift 94
	PYC  reduce 41
	ENTONCES  reduce 41
	HACER  reduce 41
	O  reduce 41


state 113
	e_bool : e_bool . O e_bool  (41)
	e_bool : e_bool . Y e_bool  (42)
	e_bool : e_bool Y e_bool .  (42)

	.  reduce 42


state 114
	relacional : relacional . OPERADOR_RELACIONAL relacional  (47)
	relacional : relacional OPERADOR_RELACIONAL relacional .  (47)

	.  reduce 47


state 115
	expresion : expresion . SUM_RES expresion  (49)
	expresion : expresion SUM_RES expresion .  (49)
	expresion : expresion . MUL_DIV_MOD expresion  (50)

	MUL_DIV_MOD  shift 97
	PYC  reduce 49
	ENTONCES  reduce 49
	HACER  reduce 49
	COMA  reduce 49
	O  reduce 49
	Y  reduce 49
	OPERADOR_RELACIONAL  reduce 49
	SUM_RES  reduce 49
	CORDER  reduce 49
	RPAR  reduce 49


state 116
	expresion : expresion . SUM_RES expresion  (49)
	expresion : expresion . MUL_DIV_MOD expresion  (50)
	expresion : expresion MUL_DIV_MOD expresion .  (50)

	.  reduce 50


state 117
	sentencias : sentencias . sentencia  (23)
	sentencia : MIENTRAS e_bool HACER sentencias . FIN  (27)

	INICIO  shift 49
	FIN  shift 127
	SI  shift 51
	MIENTRAS  shift 52
	HACER  shift 53
	SEGUN  shift 54
	ESCRIBIR  shift 55
	DEVOLVER  shift 56
	LEER  shift 57
	TERMINAR  shift 58
	ID  shift 59
	.  error

	sentencia  goto 60
	variable  goto 61


state 118
	sentencia : MIENTRAS e_bool . HACER sentencias FIN  (27)
	sentencia : HACER sentencias MIENTRAS e_bool . PYC  (28)
	e_bool : e_bool . O e_bool  (41)
	e_bool : e_bool . Y e_bool  (42)

	PYC  shift 128
	HACER  shift 98
	O  shift 93
	Y  shift 94
	.  error


state 119
	sentencia : SEGUN LPAR variable RPAR . HACER casos predeterminado FIN  (29)

	HACER  shift 129
	.  error


state 120
	arreglo : CORIZQ expresion CORDER .  (62)
	arreglo : CORIZQ expresion CORDER . arreglo  (63)

	CORIZQ  shift 83
	PYC  reduce 62
	ENTONCES  reduce 62
	HACER  reduce 62
	COMA  reduce 62
	ASIG  reduce 62
	O  reduce 62
	Y  reduce 62
	OPERADOR_RELACIONAL  reduce 62
	SUM_RES  reduce 62
	MUL_DIV_MOD  reduce 62
	CORDER  reduce 62
	RPAR  reduce 62

	arreglo  goto 130


state 121
	variable_comp : LPAR parametros RPAR .  (59)

	.  reduce 59


state 122
	lista_param : lista_param COMA . expresion  (66)

	ID  shift 59
	CARACTER  shift 66
	CADENA  shift 67
	NUM  shift 68
	LPAR  shift 70
	.  error

	expresion  goto 131
	variable  goto 74


state 123
	dato_est_sim : dato_est_sim PUNTO ID .  (60)

	.  reduce 60

